fix: remove extra spacing in aside component

--- a/packages/gatsby-theme-carbon/src/components/Aside/Aside.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Aside/Aside.module.scss
@@ -17,7 +17,6 @@
 
 :global(.#{$prefix}--row) .aside p {
   @include carbon--type-style('body-long-01');
-  width: 75%;
   padding-right: $spacing-05;
 }
 
